tests/test102.rael.exp
Error [tests/test102.rael:1:17]: Expected an iterable
| loop :a through 3 {
|                 ^
