tests/test102.rael
loop :a through 3 {

}
